fix z-index

--- a/components/atoms/CustomOption/customOption.module.css
+++ b/components/atoms/CustomOption/customOption.module.css
@@ -3,9 +3,11 @@
   padding: 10px 20px;
   white-space: nowrap;
   border: 1px white solid;
+  cursor: pointer;
 }
 
 .text {
-    margin: 0;
-    font-size: 12px;
+  cursor: pointer;
+  margin: 0;
+  font-size: 12px;
 }
