--- a/components/molecules/CustomSelection/customSelection.module.css
+++ b/components/molecules/CustomSelection/customSelection.module.css
@@ -12,6 +12,7 @@
 }
 
 .optionsContainer {
+
   background-color: #24292e;
   color: white;
   padding: 5px;
@@ -47,6 +48,7 @@
 }
 
 .select{
+  cursor: pointer;
   width: 180px;
   position: relative;
   display: flex;
@@ -59,6 +61,7 @@
   white-space: nowrap;
   border: 1px solid white;
   padding: 0 20px 0 0;
+  z-index: 11;
 }
 
 .option {
