--- a/components/molecules/SearchBar/searchBar.module.css
+++ b/components/molecules/SearchBar/searchBar.module.css
@@ -28,7 +28,7 @@
 
 .input {
   width: calc(90% - 50px);
-  z-index: 9;
+  z-index: 7;
   outline: none;
   border: none;
   margin-left: 10px;
